= RubyMotion 3.1 =

  * [iOS] Fixed a regression where wrong info.plist would be genrated wchich
    related to Background Fetch.

= RubyMotion 3.0 =

  * [Android] RubyMotion for Android support has been merged. Please refer to the
    pre-release NEWS file for past changes, and check out our developer guides for
    more information about this new platform support.
  * [iOS] Added support for WatchKit applications.
    Add a target to your iOS application by creating a WatchKit project with the
    command: `$ motion create MyWatchApp --template=ios-watch-extension` and
    then configure your iOS application by adding:
    `app.target 'path/to/MyWatchApp', :extension`
    Then from the root of your iOS application, *not* the WatchKit application,
    invoke `$ rake watch` to build your iOS and WatchKit applications and launch
    the WatchKit application on the simulator.
    Additional launch options are `type=glance` for Glance applications,
    `type=notification payload=path/to/payload.json` for Notification
    applications, and `display=regular` or `display=compact` to launch the 42mm
    or 38mm Watch displays respectively.
  * [iOS] Added support for specifying launch images from asset catalogs.
  * Added support for iOS 8.2 (beta). You will need to install an Xcode 6.2
    beta to support it.
  * [iOS] Fix `rake crashlog:device' crash report symbolication.
  * [iOS] Fixed a bug where Bundler wouldn't be used when it will build
    Extensions and Frameworks.
  * [iOS] Create a `UIViewController`, `UINavigationController`, and `UIWindow`
    in the default new application template.
  * [OSX] Only build for 64-bit (`x86_64`) by default.
  * [iOS] Enabled arm64 support by default for iOS projects. 
  * [iOS] Honour explicit `device_name` or `target` specified by user.
    Specifying both is disallowed, because a device is configured for a
    specific SDK.
  * [iOS] Fixed a regression where Extension and Frameworks could not build for